(ISA-249) Fixed featured map image stretching issues

--- a/frontend/src/ui/css/story-maps.scss
+++ b/frontend/src/ui/css/story-maps.scss
@@ -1,20 +1,28 @@
 .featured-map {
-    display: flex;
     margin: 8px 12px;
 }
 
-.featured-map > img {
-    flex: 1;
-    min-width: 0;
-    border: 1px solid rgba(0,0,0,.2);
+.featured-map > .image-container {
+    width: 120px;
+    height: 104px;
+    float: left;
+    margin: 0 12px 6px 0;
+    position: relative;
+    background-color: rgba(0,0,0,.05);
 }
 
-.featured-map > .details {
-    flex: 2;
-    padding: 8px;
+.image-container > img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-.featured-map > .details > .title {
+.featured-map > .title {
     font-weight: bold;
     font-size: 16px;
 }
